@@ -27,10 +27,10 @@ The runtime is designed for rapid iteration with hot-reloadable scripting, a sel
 
 ---
 
-## Current Snapshot (v0.62.0)
+## Current Snapshot (v0.62.2)
 
 - ✅ **Immediate GUI everywhere** – `agui.hpp` seeds a shared font atlas, now covers buttons, image buttons, editable text fields, text boxes, and a turnkey console overlay so every backend renders consistent tooling widgets out of the box.
-- ✅ **HiDPI-aware multi-context rendering** – Raylib and SDL3 cache framebuffer metrics and remap input coordinates so docked panes stay pixel-accurate after DPI or window changes.
+- ✅ **HiDPI-aware multi-context rendering** – Raylib now seeds its viewport fit immediately during resize events, eliminating the start-up clipping and scaling drift that previously nudged menu buttons off-screen, while SDL3 continues to remap input so docked panes stay pixel-accurate after DPI or window changes.
 - ✅ **Configurable menu layouts** – The runtime honours a `--menu-columns` cap to keep atlas-driven menus readable on constrained displays.
 - ✅ **Robust hot reload** – The scripting pipeline emits `ScriptLoadReport` diagnostics, prunes completed jobs, and waits synchronously so tooling observes a deterministic post-reload state.
 
